# xcrop-python

./: .gitignore  README.md  pyproject.toml
tests/: test_sdk.py
xcrop/: __init__.py  _http.py  _version.py  client.py  errors.py  types.py
xcrop/resources/: __init__.py  account.py  kol.py  lists.py  search.py  stream.py  trending.py  tweets.py  users.py
