[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xcrop"
version = "1.0.0"
description = "Official Python SDK for the XCROP API — X/Twitter data intelligence platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "XCROP", email = "support@xcrop.io" },
]
keywords = ["twitter", "x", "api", "scraper", "data", "intelligence", "xcrop"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "typing_extensions>=3.7.4; python_version < '3.12'",
]

[project.urls]
Homepage = "https://xcrop.io"
Documentation = "https://xcrop.io/docs"
Repository = "https://github.com/xcrop/xcrop-python"
Issues = "https://github.com/xcrop/xcrop-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["xcrop"]
